[project]
name = "rl-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "kwkim1030", email = "kkw5657@kakao.com" }
]
requires-python = ">=3.12"
dependencies = [
    "bitsandbytes>=0.48.2",
    "datasets==4.4.1",
    "torch==2.8.0",
    "transformers==4.57.3",
    "trl[vllm]==0.25.1",
    "wandb==0.23.0",
]

[project.scripts]
rl-project = "rl_project:main"

[build-system]
requires = ["uv_build>=0.9.15,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "lab>=8.5",
]